--- a/package.json
+++ b/package.json
@@ -21,10 +21,22 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/admob-free": "^4.9.2",
     "@ionic-native/core": "4.9.1",
     "@ionic-native/splash-screen": "4.9.1",
     "@ionic-native/status-bar": "4.9.1",
     "@ionic/storage": "2.1.3",
+    "cordova-admob-sdk": "^0.17.0",
+    "cordova-android": "6.4.0",
+    "cordova-connectivity-monitor": "^1.2.2",
+    "cordova-plugin-admob-free": "^0.17.3",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-firebase": "^1.0.5",
+    "cordova-plugin-ionic-keyboard": "^2.0.5",
+    "cordova-plugin-ionic-webview": "^1.1.19",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-promise-polyfill": "0.0.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
@@ -35,5 +47,19 @@
     "@ionic/app-scripts": "3.1.10",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-admob-free": {},
+      "cordova-plugin-firebase": {}
+    },
+    "platforms": [
+      "android"
+    ]
+  }
 }
