--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@ionic-native/admob-free": "^4.9.2",
     "@ionic-native/core": "4.9.1",
     "@ionic-native/splash-screen": "4.9.1",
-    "@ionic-native/status-bar": "4.9.1",
+    "@ionic-native/status-bar": "^4.9.1",
     "@ionic/storage": "2.1.3",
     "cordova-admob-sdk": "^0.17.0",
     "cordova-android": "6.4.0",
@@ -38,6 +38,7 @@
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-promise-polyfill": "0.0.2",
     "ionic-angular": "3.9.2",
+    "ionic-native": "^2.9.0",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
